unitpricecomparison2/styles.css
html * { /* Hack to disable Chrome font boosting. Breaks small screen emulation in desktop Chrome. */
  max-height:1000000px;
}

body {
  font-family: "open sans", Verdana, arial, sans-serif;
  font-size: 3rem;
  background-color: #F0F0F0;
  margin: 0px;
}

h3 {
  font-size: 3.5rem;
  padding: 1rem;
  margin: 0px;
  background-color: #003FD1;
  color: #FFFFFF;
  font-weight: normal;
  vertical-align: top;
}

.unitPriceComparisonIcon {
  height: 1.5em;
  vertical-align: bottom;
}

.multiplicationSign, .expandCollapseArrow {
  height: 1em;
  vertical-align: -15%;
  padding: 1px;
}

button {
  height: 4rem;
  min-width: 6rem;
  vertical-align: 15%;
}

.itemCard {
  box-shadow: 0px 0px 10px #000000;
  margin: 0.5rem;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  background-color: #FFFFFF;
}

:placeholder-shown, .itemLabel {
  font-size: 2.25rem;
}

input, button {
  font-size: 2.75rem;
}

input, .itemPricePerUnits, .itemLabel {
  width: 25%;
  margin: 0.3rem;
}

input{
  border-width: 0px;
  border-bottom: 2px solid;
  border-color: #7C7C7C;
}

.itemPricePerUnits {
  display: inline-block;
  text-align: left;
}

.quantity {
  margin-left: 0.4rem;
}

